# llm_bitcoin_inscription_analysis

./: .gitignore  Cargo.toml
src/: config.rs  main.rs  progress.rs
src/inscriptions/: inscription.rs
src/llm/: prompt.rs
